[package]
name = "lock_cell"
version = "0.2.0"
edition = "2021"
description = "A custom locking cell type written in Rust"
license = "0BSD"
keywords = ["cell", "lock", "mutex", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["enable_std"]
enable_std = []
# rust-analyzer wants this feature present here.
logging = []
